# LETI

Lr5/: CMakeLists.txt  README.md
Lr5/src/: algComparison.cpp  algComparison.h  kmp.cpp  kmp.h  naiveSearch.cpp  patternSearch.cpp  shiftSearch.cpp
Lr5/test/: kmpTest.cpp  testPattern.cpp  testShift.cpp
Semester_4/PIAA/Lr5/: CMakeLists.txt
Semester_4/PIAA/Lr5/src/: comparisonTest.cpp  kmp.cpp  kmp.h
Semester_4/PIAA/Lr5/test/: kmpTest.h  testPrefix.cpp
